kube/services/bar/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bar
  labels:
    istio-injection: enabled
