kube/services/bar/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      serviceAccountName: bar
      containers:
      - name: hello
        image: k3d-local-registry:5555/hello:0.0.1
        imagePullPolicy: Always
