kube/services/bar/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar
  labels:
    app: bar
    service: bar
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: bar
